...
                        android:inputType="textMultiLine"
                        android:layout_weight="1"
                        android:textSize="17sp"
                        android:maxLines="6"
                        android:scrollbarStyle="insideOverlay"
                        android:ems="10"
                        android:id="@+id/frag_chat_edittext_insert" />

                <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_baseline_send_24"
                        android:enabled="false"
                        android:id="@+id/frag_chat_button_send" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


</FrameLayout>
