<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:title="@string/github"
            android:icon="@drawable/ic_mark_github_16"
            android:id="@+id/menu_toolbar_github"
            app:showAsAction="ifRoom"
            android:visible="false" />
    <item
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="ifRoom"
        android:visible="false"
            android:id="@+id/menu_toolbar_share"
        />
    <item
        android:title="@string/info"
            android:icon="@drawable/ic_baseline_info_24"
            android:id="@+id/menu_toolbar_info"
            app:showAsAction="ifRoom"
            android:visible="false"
        />



</menu>